<resources>
    <string name="app_name">NavigationFirst</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_button_title">Name</string>
    <string name="next_button_title">next</string>
    <string name="cancel_button_title">cancel</string>
    <string name="_1_was_sent_to_mitch_text_view">$1 was sent to Mitch</string>
    <string name="view_transactions_button_title">View transactions</string>
    <string name="send_money_button_title">Send money</string>
    <string name="view_balance_button_title">View balance</string>
    <string name="send_button_title">send</string>
    <string name="amount_hint">Amount</string>
    <string name="quantity_of_money_text_view">$1</string>
    <string name="_150_dollars">$150</string>
    <string name="utility_text_view">Utility</string>
    <string name="_3600_dollars">$3600</string>
    <string name="candles_text_view">Candles</string>
    <string name="_200_dollars">$200</string>
    <string name="rent_text_view">Rent</string>
    <string name="data_text_view">Data</string>
    <string name="_300_dollars">$300</string>
    <string name="food_text_view">Food</string>
</resources>
