<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".view.fragment.ViewTransactionFragment">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_text_view"
            android:id="@+id/titleFood"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="28sp"
            app:layout_constraintHorizontal_bias=".25"
            app:layout_constraintVertical_bias=".1667"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_300_dollars"
            android:id="@+id/valueFood"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/titleFood"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="28sp"
            app:layout_constraintHorizontal_bias=".75"
            app:layout_constraintVertical_bias=".1667"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_text_view"
            android:id="@+id/titleData"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="28sp"
            app:layout_constraintHorizontal_bias=".25"
            app:layout_constraintVertical_bias=".3333"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_200_dollars"
            android:id="@+id/valueData"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/titleData"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="28sp"
            app:layout_constraintHorizontal_bias=".75"
            app:layout_constraintVertical_bias=".3333"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rent_text_view"
            android:id="@+id/titleRent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="28sp"
            app:layout_constraintHorizontal_bias=".25"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_200_dollars"
            android:id="@+id/valueRent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/titleRent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="28sp"
            app:layout_constraintHorizontal_bias=".75"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/candles_text_view"
            android:id="@+id/titleCandles"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="28sp"
            app:layout_constraintHorizontal_bias=".25"
            app:layout_constraintVertical_bias=".6667"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3600_dollars"
            android:id="@+id/valueCandles"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/titleCandles"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="28sp"
            app:layout_constraintHorizontal_bias=".75"
            app:layout_constraintVertical_bias=".6667"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/utility_text_view"
            android:id="@+id/titleUtility"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="28sp"
            app:layout_constraintHorizontal_bias=".25"
            app:layout_constraintVertical_bias=".8334"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_150_dollars"
            android:id="@+id/valueUtility"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/titleUtility"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="28sp"
            app:layout_constraintHorizontal_bias=".75"
            app:layout_constraintVertical_bias=".8334"/>

</androidx.constraintlayout.widget.ConstraintLayout>

