<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".view.fragment.MainFragment">

    <Button
            android:text="@string/view_transactions_button_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/viewTransactionsButton"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/sendMoneyButton"
            app:layout_constraintTop_toTopOf="parent"/>

    <Button
            android:text="@string/send_money_button_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sendMoneyButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
            android:text="@string/view_balance_button_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/viewBalanceButton"
            app:layout_constraintTop_toBottomOf="@+id/sendMoneyButton"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
