<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.ChooseRecipientFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintVertical_bias=".25"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:weightSum="100">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:helperText="Recipient"
                app:errorEnabled="true"
                android:layout_weight="60">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:maxLines="1"
                    android:hint="@string/name_button_title"
                    android:id="@+id/inputRecipient"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintVertical_bias=".4"
            app:layout_constraintRight_toLeftOf="@+id/cancelButtonFromChooseRecipientFragment"
            android:id="@+id/nextButton"
            android:text="@string/next_button_title"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/nextButton"
            app:layout_constraintVertical_bias=".4"
            android:id="@+id/cancelButtonFromChooseRecipientFragment"
            android:text="@string/cancel_button_title"/>


</androidx.constraintlayout.widget.ConstraintLayout>