<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.SpecifyAmountFragment">

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintVertical_bias=".15"
              android:id="@+id/recipientTextView"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintVertical_bias=".25"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:weightSum="100">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:helperText="$0.00"
                app:errorEnabled="true"
                android:layout_weight="60">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:hint="@string/amount_hint"
                    android:id="@+id/inputAmount"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintVertical_bias=".4"
            app:layout_constraintRight_toLeftOf="@+id/cancelButtonFromSpecifyAmountFragment"
            android:id="@+id/sendButton"
            android:text="@string/send_button_title"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/sendButton"
            app:layout_constraintVertical_bias=".4"
            android:id="@+id/cancelButtonFromSpecifyAmountFragment"
            android:text="@string/cancel_button_title"/>
</androidx.constraintlayout.widget.ConstraintLayout>

